<resources>
    <string name="app_name">Postery</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_title">Search</string>
    <string name="search_hint">hint</string>
    <string name="category_1">Academy</string>
    <string name="category_6">Sport</string>
    <string name="category_5">Music</string>
    <string name="category_4">Movie</string>
    <string name="category_3">Meetup</string>
    <string name="category_2">Career</string>
</resources>
