<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".HomeActivity"
    android:id="@+id/root_layout">
    <LinearLayout
        android:id="@+id/UpperLayout"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:background="@drawable/academy_banner"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:paddingLeft="@dimen/category_button_padding"
                android:paddingRight="@dimen/category_button_padding"
                android:text="LOGO"/>
            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="5dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@color/search_text_bg">
                <EditText
                    android:id="@+id/search_text"
                    android:layout_width="250dp"
                    android:layout_height="fill_parent"
                    android:background="@color/res_bg_transparent"
                    android:cursorVisible="false"
                    />
                <ImageButton
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:src="@drawable/abc_ic_search_api_mtrl_alpha"
                    />
            </LinearLayout>
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:paddingLeft="@dimen/category_button_padding"
                android:paddingRight="@dimen/category_button_padding"
                android:background="@drawable/head_sample"
                />
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bt_category_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/res_bg_transparent"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_1"
                    />

                <Button
                    android:id="@+id/bt_category_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_2"
                    />
                <Button
                    android:id="@+id/bt_category_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_3"
                    />
                <Button
                    android:id="@+id/bt_category_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_4"
                    />
                <Button
                    android:id="@+id/bt_category_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_5"
                    />
                <Button
                    android:id="@+id/bt_category_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/category_button_padding"
                    android:paddingRight="@dimen/category_button_padding"
                    android:background="@color/res_bg_transparent"
                    android:onClick="clickCategory"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/category_button_text"
                    android:text="@string/category_6"
                    />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/swipe_layout">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>>
</LinearLayout>